# n8n-web3

./: .env.example  .gitignore  README.md  TESTING.md  TESTS_QUICK_START.md  TEST_DOCUMENTATION.md  TEST_README.md  TEST_SUMMARY.md  docker-compose.yml  mprocs.yaml  next.config.ts  package-lock.json  package.json  run.sh  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: build-and-deploy.yml
back/: .env  Cargo.toml
back/.solana/: payer-keypair.json  program-keypair.json
back/deployment_logs/: 1f2391c6-34b9-47f5-9158-f62b96af2e22.json  3bd28192-43be-497a-b963-06897ab5fcfd.json
back/src/: lib.rs  main.rs
back/src/common/: error.rs  logging.rs  mod.rs
back/src/deploy/: mod.rs
back/src/deploy/ethereum/: deployer.rs  mod.rs  types.rs
back/src/deploy/solana/: deployer.rs  mod.rs  types.rs
back/src/queue/: manager.rs  mod.rs  types.rs
back/src/worker/: mod.rs  pool.rs  solana.rs  types.rs
desktop/: README.md  main.js  package.json
desktop/assets/: index.html  next-page.html  workflows.html
desktop/scripts/: fileUtils.js  preload.js  stateStore.js
frontend/: config.json  environment.txt  package-lock.json  package.json  web3.ts
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts  routes.tsx  server-store.ts  store.ts  types.ts  wallets.tsx
prisma/: schema.prisma
programs/first/: Anchor.toml
scripts/: manage-deployments.sh
src/: auth-client.ts  auth-utils.ts  auth.ts  instrumentation-client.ts
src/app/: client.tsx  globals.css  layout.tsx  page.tsx
src/components/: inital-node.test.tsx  inital-node.tsx  node-selector.test.tsx  node-selector.tsx  workflow-node.test.tsx  workflow-node.tsx
src/config/: constants.ts  node-components.test.ts  node-components.ts
src/features/: theme-toggler.tsx
src/hooks/: use-entity-search.tsx  use-upgrade-modal.tsx
src/inngest/: client.ts  utils.ts
src/lib/: db.ts  polar.ts  utils.test.ts
src/test/: README.md  mock-factories.ts  (+2 more)
test/: setup.ts
(+189 files in other folders)
