[package]
name = "deploy-server"
version = "0.1.0"
edition = "2021"
description = "A deployment service for Solana and EVM programs"

[dependencies]
# Web server
actix-web = "4.5"
actix-rt = "2.9"
tokio = { version = "1.36", features = ["full"] }

# Solana dependencies - using latest stable versions
solana-client = "1.18.3"
solana-sdk = "1.18.3"
solana-program = "1.18.3"

# Ethereum dependencies - using latest stable versions
ethers = { version = "2.0.10", features = ["ws", "rustls"] }
ethers-solc = "2.0.10"
eyre = "0.6.8"
hex = "0.4.3"

# Async runtime and utilities
async-trait = "0.1.77"
crossbeam-channel = "0.5.12"
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shellexpand = "3.1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
anyhow = "1.0.80"
thiserror = "1.0.56"
base64 = "0.21.7"
tempfile = "3.10.1"

[dev-dependencies]
tokio-test = "0.4.3"

[package.metadata]
# Force cargo to use a specific resolver version
resolver = "2"
